# CrowPanel_OpenAI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/esp_webrtc/impl/apprtc_signal/: https_client.c
components/esp_webrtc/src/: esp_webrtc.c
components/media_lib_sal/: media_lib_os.c
components/media_lib_sal/include/port/: media_lib_os_reg.h
components/media_lib_sal/port/: media_lib_os_freertos.c
components/ringbuf/: fifo_ringbuf.c  fifo_ringbuf.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c  wifi.h
main/: CMakeLists.txt  idf_component.yml  lvgl_v8_port.cpp  lvgl_v8_port.h  main.cpp
main/app/: app.c  board.c  media_sys.c  network.c  nvs.c  openai.c  openai_chat.c  openai_signaling.c  openai_webrtc.c
main/app/audio/: audio_codec_data_dummy.c  dummy_codec.c  esp_capture_audio_afe_src.c  limiter.c
main/app/audio/include/: audio_codec_data_dummy.h  dummy_codec.h  esp_capture_audio_afe_src.h  limiter.h
main/app/include/: app.h  board.h  media_sys.h  network.h  nvs.h  openai.h  openai_webrtc.h
main/ui/: auth_window.c  common.c  popup.c  settings_window.c  status_bar.c  terminal.c  ui.c  wifi_window.c
main/ui/assets/: icons.c  noto_sans_18.c
main/ui/include/: auth_window.h  common.h  popup.h  settings_window.h  status_bar.h  terminal.h  ui.h  wifi_window.h
